porządki w sygnałach chatMsgReceived
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4339 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu-core/Makefile.am
+++ b/kadu-core/Makefile.am
@@ -75,7 +75,7 @@ chat_window.h \
 color_button.h \
 color_selector.h \
 configuration_window.h \
-configuration_window_widgets.cpp \
+configuration_window_widgets.h \
 config_file.h \
 custom_input.h \
 debug.h \
