odswiezanie toolbarow; przycisk kolorow w chacie
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4386 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -31,6 +31,10 @@ AboutMenuItem=abouticon16.png
 HideKadu=hide.png
 Exit=exit.png
 
+Bold=bold.png
+Italic=italic.png
+Underline=underline.png
+
 OpenChat=chat16.png
 WriteEmail=message.png
 RemoveFromUserlist=deluser.png
