2 nowe akcje zmieniajace userliste
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4388 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -57,6 +57,8 @@ Mute=mute.png
 Unmute=unmute.png
 ShowHideInactiveUsers=offline.png
 ShowOnlyDescriptionUsers=online_d.png
+ShowOnlineAndDescriptionUsers=onoff_d.png
+ShowDescription=desc.png
 
 Message=message.png
 MessageAnim=message_anim.gif
