--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -19,35 +19,36 @@ InvisibleWithMobile=invisible_m.png
 InvisibleWithDescription=invisible_d.png
 InvisibleWithDescriptionMobile=invisible_d_m.png
 
-ManageIgnored=manageignored16.png
-Configuration=configure.png
-ManageModules=modmanager.png
-PersonalInfo=identity.png
-LookupUserInfo=viewmag.png
-ImportExport=impexpicon16.png
-AddUser=adduser.png
+ManageIgnored=manageignored_small.png
+Configuration=configuration_small.png
+ManageModules=modmanager_small.png
+PersonalInfo=personalinformation_small.png
+LookupUserInfo=lookupuser.png
+ImportExport=impexpicon_small.png
+AddUser=adduser_small.png
 HelpMenuItem=help.png
-AboutMenuItem=abouticon16.png
+AboutMenuItem=abouticon_small.png
 HideKadu=hide.png
 Exit=exit.png
 
-Bold=bold.png
-Italic=italic.png
-Underline=underline.png
+Bold=text-bold.png
+Italic=text-italic.png
+Underline=text-underline.png
+Black=color-black.png
 
-OpenChat=chat16.png
+OpenChat=chat_small.png
 WriteEmail=message.png
 RemoveFromUserlist=deluser.png
 ClearHistory=erasehistory.png
-History=history.png
-EditUserInfo=identity.png
+History=history_small.png
+EditUserInfo=personalinformation_small.png
 VoiceChat=voice.png
 
 AutoSendMessage=key_enter.png
 ScrollLock=scroll_lock.png
 ClearChat=erasechat.png
 ChooseEmoticon=emoticon.png
-ChooseImage=icons.png
+ChooseImage=chooseimage.png
 EncryptedChat=encrypted.png
 DecryptedChat=decrypted.png
 SendMessage=forward.png
@@ -58,7 +59,7 @@ Unmute=unmute.png
 ShowHideInactiveUsers=offline.png
 ShowOnlyDescriptionUsers=online_d.png
 ShowOnlineAndDescriptionUsers=onoff_d.png
-ShowDescription=desc.png
+ShowDescription=description.png
 
 Message=message.png
 MessageAnim=message_anim.gif
@@ -71,26 +72,28 @@ MergeUserlist=mergeuserlist.png
 SendUserlist=exportuserlist.png
 DeleteUserlist=deluserlist.png
 ExportUserlist=exporttofile.png
-ResendUserlist=reload.png
+ResendUserlist=apply.png
 
 PreviousPageHistory=back.png
 NextPageHistory=forward.png
 
-ChangePassMail=pass-mail.png
-RemindPass=password16.png
-RegisterUser=newuser.png
+ChangePassMail=changepassword_small.png
+RemindPass=remindpassword_small.png
+RegisterUser=registeraccount_small.png
 UnregisterUser=deluser.png
 Mobile=mobile.png
 SendSms=mobile.png
 SendFile=filesave.png
 SendFileWindow=filesave.png
+FileTransferSend=
+FileTransferReceive=
 SendPublicKey=encrypted.png
 OpenFile=fileopen.png
 AddToNotifyList=forward.png
 RemoveFromNotifyList=back.png
-Warning=msgbox-warning.png
+Warning=warning.png
 Information=notify.png
-Critical=msgbox-critical.png
+Critical=critical.png
 LoadingImage=loading.png
 AboutIcon=abouticon.png
 CloseWindow=stop.png
@@ -99,34 +102,34 @@ SendSMSButton=forward.png
 NextSearchResults=forward.png
 ClearSearchResults=eraser.png
 
-OkWindowButton=reload.png
-ApplyWindowButton=reload.png
+OkWindowButton=apply.png
+ApplyWindowButton=apply.png
 CloseWindowButton=stop.png
 CancelWindowButton=stop.png
-AddUserButton=reload.png
-UpdateUserButton=reload.png
-RegisterAccountButton=reload.png
-UnregisterAcctounButton=reload.png
-ChangePasswordEmailButton=reload.png
-RemindPasswordButton=reload.png
+AddUserButton=apply.png
+UpdateUserButton=apply.png
+RegisterAccountButton=apply.png
+UnregisterAcctounButton=apply.png
+ChangePasswordEmailButton=apply.png
+RemindPasswordButton=apply.png
 DeleteIgnoredButton=stop.png
-AddIgnoredButton=reload.png
-ReloadPersonalInfoButton=reload.png
+AddIgnoredButton=apply.png
+ReloadPersonalInfoButton=apply.png
 SavePersonalInfoButton=filesave.png
 ChooseSelectPathDialogButton=fileopen.png
 AddSelectPathDialogButton=add.png
 RemoveSelectPathDialogButton=stop.png
-ChangeSelectPathDialogButton=reload2.png
-ApplySelectPathDialogButton=reload.png
+ChangeSelectPathDialogButton=reload.png
+ApplySelectPathDialogButton=apply.png
 
-ManageModulesWindowIcon=share.png
-AddUserWindowIcon=manusricon.png
+ManageModulesWindowIcon=modmanager.png
+AddUserWindowIcon=adduser.png
 ImportExportWindowIcon=impexpicon.png
-ManageUsersWindowIcon=personalinfo.png
+ManageUsersWindowIcon=personalinformation.png
 ManageIgnoredWindowIcon=manageignored.png
-PersonalInformationWindowIcon=personalinfo.png
-ChangePasswordWindowIcon=password.png
-RemindPasswordWindowIcon=remind-pass.png
+PersonalInformationWindowIcon=personalinformation.png
+ChangePasswordWindowIcon=changepassword.png
+RemindPasswordWindowIcon=remindpassword.png
 RegisterWindowIcon=registeraccount.png
 UnregisterWindowIcon=unregisteraccount.png
 SelectPathWindowIcon=selectpath.png
@@ -135,20 +138,19 @@ ShortCutsTab=shortcuts.png
 ChatTab=chat.png
 LookTab=look.png
 NetworkTab=network.png
-HistoryTab=history_1.png
-GeneralTab=generals.png
+HistoryTab=history.png
+GeneralTab=configuration.png
 AutoresponderTab=autoresponder.png
 SMSTab=sms.png
 SoundsTab=sounds.png
 SpeechTab=speech.png
 NotifyTab=notify.png
 HintsTab=hints.png
-DesktopDockTab=kadu.png
+DesktopDockTab=desktopdock.png
+ConfigurationWizard=wizard.png
 
 XOSDTab=
 XMMSTab=xmms.png
 WeatherTab=weather.png
+ShowWeather=weather_small.png
 MailTab=mail.png
-ConfigurationWizard=wizard.png
-ShowWeather=weather16.png
-Language=language.png
