nowa ikona w menu userboxa
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4425 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -43,6 +43,7 @@ ClearHistory=erasehistory.png
 History=history_small.png
 EditUserInfo=personalinformation_small.png
 VoiceChat=voice.png
+NotifyAboutUser=notify_small.png
 
 AutoSendMessage=key_enter.png
 ScrollLock=scroll_lock.png
