poprawki w domyslnym zestawie ikon
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4476 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -69,7 +69,6 @@ ShowDescription=kadu/kadu-descriptions_on.png
 Message=kadu/kadu-message.png
 MessageAnim=kadu/kadu-message_anim.gif
 
-
 FetchUserList=kadu/kadu-importuserlist.png
 ImportFromFile=kadu/kadu-importfromfile.png
 SaveUserlist=kadu/kadu-saveuserlist.png
@@ -141,7 +140,7 @@ ChatTab=kadu/kadu-chat_big.png
 LookTab=kadu/kadu-look.png
 GeneralTab=kadu/configure_big.png
 SMSTab=kadu/phone_big.png
-SpeechTab=kadu/audio-input-microphone.png_big.png
+SpeechTab=kadu/audio-input-microphone_big.png
 NotifyTab=kadu/kadu-hints.png
 
 XOSDTab=external_modules/module_xosd.png
@@ -149,3 +148,5 @@ XMMSTab=external_modules/module_xmms.png
 WeatherTab=external_modules/module_weather.png
 ShowWeather=external_modules/module_weather-show.png
 MailTab=external_modules/module_mail.png
+TabsDetached=external_modules/module_tabs-detach.png 
+TabsClose=external_modules/module_tabs-close.png
