--- a/libgadu/include/Makefile.in
+++ b/libgadu/include/Makefile.in
@@ -120,6 +120,7 @@ PTHREAD_CFLAGS = @PTHREAD_CFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
 RANLIB = @RANLIB@
 REQUIRES = @REQUIRES@
+SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
