ikony w oknie konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4509 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -142,6 +142,8 @@ LookTab=kadu/kadu-look.png
 GeneralTab=kadu/configure_big.png
 SMSTab=kadu/phone_big.png
 NotifyTab=kadu/kadu-notifications.png
+StatusTab=kadu/kadu/kadu-status.png
+ContactsTab=kadu/kadu-contacts.png
 
 XOSDTab=external_modules/module_xosd.png
 XMMSTab=external_modules/module_xmms.png
