modul exec_notify dodany do svn
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4572 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -74,6 +74,10 @@ module_window_notify=m
 # Depends: notify
 module_hints=m
 
+# Description: Notification by external commands module
+# PL: Modu³ powiadamiania o zdarzeniach za pomoc± zewnêtrznych poleceñ
+module_exec_notify=m
+
 # Description: Speech synthesis support ("powiedz")
 # PL: Powiadamianie mow± za pomoc± programu "powiedz"
 # Depends: notify
@@ -294,10 +298,6 @@ module_firewall=n
 # Description: Shows message, when user you're waiting for is online.
 # PL: Informuje o dostêpno¶ci kontaktu, na który czekamy.
 module_iwait4u=n
-
-# Description: Notification by external commands module
-# PL: Modu³ powiadamiania o zdarzeniach za pomoc± zewnêtrznych poleceñ
-module_exec_notify=n
 
 # Description: Power Kadu
 # PL: Power Kadu
