mala zmiana dla keysmanager
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4583 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -19,6 +19,7 @@ InvisibleWithMobile=protocols/gg/user-invisible_m.png
 InvisibleWithDescription=protocols/gg/user-invisible_d.png
 InvisibleWithDescriptionMobile=protocols/gg/user-invisible_d_m.png
 
+KeysManager=kadu/kadu-encrypted.png
 ManageIgnored=kadu/kadu-manageignored.png
 Configuration=kadu/configure.png
 ManageModules=kadu/kadu-modmanager.png
@@ -118,6 +119,8 @@ ChangePasswordEmailButton=kadu/dialog-apply.png
 RemindPasswordButton=kadu/dialog-apply.png
 DeleteIgnoredButton=kadu/list-remove.png
 AddIgnoredButton=kadu/dialog-apply.png
+DeleteKeyButton=kadu/stop.png
+AddKeyButton=kadu/reload.png
 ReloadPersonalInfoButton=kadu/dialog-apply.png
 SavePersonalInfoButton=kadu/document-save.png
 ChooseSelectPathDialogButton=kadu/document-open.png
@@ -126,6 +129,7 @@ RemoveSelectPathDialogButton=kadu/list-remove.png
 ChangeSelectPathDialogButton=kadu/view-refresh.png
 ApplySelectPathDialogButton=kadu/dialog-apply.png
 
+ManageKeysWindowIcon=kadu/dialog-password_big.png
 ManageModulesWindowIcon=kadu/kadu-modmanager_big.png
 AddUserWindowIcon=kadu/contact-new_big.png
 ImportExportWindowIcon=kadu/kadu-impexp_big.png
