nowe moduły mediaplayer dodane
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4663 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -89,6 +89,12 @@ module_xosd_notify=n
 # Depends: notify
 module_speech=n
 
+# Description: Notification by XOSD
+# PL: Powiadamianie w stylu OSD za pomoc± biblioteki libxosd
+# Needs: libxosd, libgtk
+# Depends: notify
+module_xosd_notify=n
+
 ##################### sound ##########################################
 # PL: ############### d¼wiêk #########################################
 
@@ -162,6 +168,10 @@ module_default_sms=m
 # PL: Obs³uga rejestracji / wyrejestrowywania konta, przypominania / zmiany has³a
 module_account_management=m
 
+# Description: User list: support for priorities (VIP/NIP) and changing order of sorting functions
+# PL: Obs³uga priorytetów (VIP/NIP) oraz zmiany kryteriów sortowania listy kontaktów
+module_advanced_userlist=m
+
 # Description: Chat history storing, browsing and searching support
 # PL: Obs³uga przechowywania historii rozmów, przegl±dania i wyszukiwania w niej
 module_history=m
@@ -193,6 +203,34 @@ module_autoresponder=m
 # PL: (to tylko przyk³ad jak siê pisze modu³y do Kadu)
 module_echo=n
 
+############################################# EXTRA ##############################################################################
+
+# Below there are some extra modules, that were made by
+# third parties, but now ale maintained by Kadu Team
+# and are not yet accepted as normal modules which
+# goes into SVN.
+
+# PL: Poni¿ej lista extra modu³ów, które zosta³y stworzone
+# przez niezale¿nych programistów, ale s± aktualnie zarz±dzanie
+# przez Kadu Team, lecz nie wesz³y jeszcze do SVN'a.
+
+# Description: Puts your current song in description
+# PL: Wstawia tytu³ aktualnie s³uchanej piosenki do opisu
+module_mediaplayer=m
+
+# Description: Audacious support for mediaplayer
+# PL: Wsparcie dla Audacious w mediaplayer
+module_audacious_mediaplayer=m
+
+# Description: Amarok support for mediaplayer
+# PL: Wsparcie dla Amarok w mediaplayer
+module_amarok_mediaplayer=m
+
+# Description: XMMS support for mediaplayer
+# PL: Wsparcie dla XMMS w mediaplayer
+module_xmms_mediaplayer=n
+
+
 ############################################# EXTERNAL ###########################################################################
 # PL: ####################################### ZEWNÊTRZNE #########################################################################
 
@@ -212,17 +250,6 @@ module_echo=n
 # PL: ale zaakceptowanych przez Kadu Team i wspierane na naszym forum. Gdy wybierzesz który¶
 # PL: z tych modu³ów, jego ¼ród³a zostan± pobrane ze strony twórcy, wiêc w razie problemów nie wiñ
 # PL: nas z powodu ich (prawdopodobnie czasowej) niedostêpno¶ci.
-
-# Description: XMMS player support
-# PL: Obs³uga statusów pobieranych z XMMSa oraz jego kontrola z poziomu okna rozmowy
-# Needs: libxmms
-# Depends: notify
-module_xmms=n
-
-# Description: AmaroK player support
-# PL: Obs³uga statusów pobieranych z Amaroka
-# Needs: libkdecore
-module_amarok=n
 
 # Description: Description from file module
 # PL: Obs³uga statusów pobieranych z pliku
@@ -310,10 +337,6 @@ module_filtering=n
 # Description: Profiles support
 # PL: Klikalna obs³uga profili
 module_profiles=n
-
-# Description: User list: support for priorities (VIP/NIP) and changing order of sorting functions
-# PL: Obs³uga priorytetów (VIP/NIP) oraz zmiany kryteriów sortowania listy kontaktów
-module_advanced_userlist=n
 
 ############################################# ICONS ###########################################################################
 # PL: ####################################### IKONY ###########################################################################
