2 nowy moduły extra
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4668 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -216,20 +216,27 @@ module_echo=n
 
 # Description: Puts your current song in description
 # PL: Wstawia tytu³ aktualnie s³uchanej piosenki do opisu
-module_mediaplayer=m
+module_mediaplayer=n
 
 # Description: Audacious support for mediaplayer
 # PL: Wsparcie dla Audacious w mediaplayer
-module_audacious_mediaplayer=m
+module_audacious_mediaplayer=n
 
 # Description: Amarok support for mediaplayer
 # PL: Wsparcie dla Amarok w mediaplayer
-module_amarok_mediaplayer=m
+module_amarok_mediaplayer=n
 
 # Description: XMMS support for mediaplayer
 # PL: Wsparcie dla XMMS w mediaplayer
 module_xmms_mediaplayer=n
 
+# Description: Description from file module
+# PL: Obs³uga statusów pobieranych z pliku
+module_filedesc=n
+
+# Description:
+# PL: Dodaje mo¿liwo¶æ zaznaczenia fragmentu ekranu i wys³ania obrazka z jego zawarto¶ci±
+module_screenshot=n
 
 ############################################# EXTERNAL ###########################################################################
 # PL: ####################################### ZEWNÊTRZNE #########################################################################
@@ -250,10 +257,6 @@ module_xmms_mediaplayer=n
 # PL: ale zaakceptowanych przez Kadu Team i wspierane na naszym forum. Gdy wybierzesz który¶
 # PL: z tych modu³ów, jego ¼ród³a zostan± pobrane ze strony twórcy, wiêc w razie problemów nie wiñ
 # PL: nas z powodu ich (prawdopodobnie czasowej) niedostêpno¶ci.
-
-# Description: Description from file module
-# PL: Obs³uga statusów pobieranych z pliku
-module_filedesc=n
 
 # Description: Mail checker module
 # PL: Powiadamianie o nowej poczcie
@@ -309,10 +312,6 @@ module_tabs=n
 # Needs: libX11
 # Depends: notify
 module_led_notify=n
-
-# Description: 
-# PL: Dodaje mo¿liwo¶æ zaznaczenia fragmentu ekranu i wys³ania obrazka z jego zawarto¶ci±
-module_screenshot=n
 
 # Description: Notification by OSD-like hints
 # PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
