generowanie tłumaczeń z plików .ui
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4672 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/configure.ac
+++ b/configure.ac
@@ -330,7 +330,8 @@ AC_DEFUN(PROCESS_MODULE_SPEC_FILES,[
 			echo -e "update-translations:" >> modules/$mod/Makefile && \
 			if test -d "modules/$mod/translations" ; then \
 				for i in modules/$mod/translations/*.ts; do \
-					echo -e "\tlupdate ${MODULE_SOURCES} -ts translations/`basename $i`" >> modules/$mod/Makefile; \
+					echo -e "\tsaxon8 configuration/$mod.ui ../../translations/configuration-ui.xsl > .configuration-ui-translations.cpp" >> modules/$mod/Makefile; \
+					echo -e "\tlupdate ${MODULE_SOURCES} .configuration-ui-translations.cpp -ts translations/`basename $i`" >> modules/$mod/Makefile; \
 				done; \
 			fi && \
 
