nowe rzeczy w kadu 0.6
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4698 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -214,6 +214,10 @@ module_echo=n
 # przez niezale¿nych programistów, ale s± aktualnie zarz±dzanie
 # przez Kadu Team, lecz nie wesz³y jeszcze do SVN'a.
 
+# Description: List of people, that you don't have on list, but they have you
+# PL: List osób, jakich nie masz na li¶cie, ale które maj± Ciebie
+module_agent=n
+
 # Description: Puts your current song in description
 # PL: Wstawia tytu³ aktualnie s³uchanej piosenki do opisu
 module_mediaplayer=n
@@ -263,11 +267,6 @@ module_spellchecker=n
 # PL: z tych modu³ów, jego ¼ród³a zostan± pobrane ze strony twórcy, wiêc w razie problemów nie wiñ
 # PL: nas z powodu ich (prawdopodobnie czasowej) niedostêpno¶ci.
 
-# Description: Mail checker module
-# PL: Powiadamianie o nowej poczcie
-# Depends: hints
-module_mail=n
-
 # Description: PC-Speaker support
 # PL: Powiadamianie przy pomocy PC-Speakera
 # Needs: libX11
@@ -285,11 +284,6 @@ module_weather=n
 # Needs: libao
 # Depends: sound
 module_ao_sound=n
-
-# Description: Additional contact info, birthday and name-day notifier
-# PL: Rozszerzone informacje o kontakcie, powiadamianie o urodzinach
-# Depends: hints
-module_ext_info=n
 
 # Description: Exports some functions via DCOP
 # PL: Eksportuje czê¶æ funkcji Kadu poprzez DCOP (umo¿liwa m.in. obs³ugê linków gg://xxx)
@@ -312,26 +306,6 @@ module_tabs=n
 # Needs: libX11
 # Depends: notify
 module_led_notify=n
-
-# Description: Notification by OSD-like hints
-# PL: Powiadamianie o zdarzeniach przy pomocy dymków typu OSD
-module_osdhints_notify=n
-
-# Description: Protection against unwanted chats
-# PL: Ochrona przed "klikaczami"
-module_firewall=n
-
-# Description: Shows message, when user you're waiting for is online.
-# PL: Informuje o dostêpno¶ci kontaktu, na który czekamy.
-module_iwait4u=n
-
-# Description: Power Kadu
-# PL: Power Kadu
-module_powerkadu=n
-
-# Description: User list filtering
-# PL: Filtrowanie listy kontaktów
-module_filtering=n
 
 # Description: Profiles support
 # PL: Klikalna obs³uga profili
@@ -358,6 +332,9 @@ module_profiles=n
 # Description: Default icon theme shipped with sources
 # PL: Standardowy zestaw ikon dostêpny razem ze ¼ród³ami Kadu
 icons_default=y
+
+# Description: Default theme from kadu 0.5.x
+icons_kadu05=n
 
 # Description: Crystal 16x16 icons made by Arcisz
 icons_crystal16=n
@@ -397,3 +374,6 @@ emoticons_penguins=y
 # PL: Kompatybilne ze star± wersj± Gadu-Gadu 6.x
 emoticons_gg6_compatible=n
 
+# Description: Tango emoticons, some copied from penguins theme
+# PL: Emotki Tango, czê¶æ wziêta z penguins
+emoticons_tango=n
