alsa domyślnie włączona, niech BSD dla siebie wyłącza
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4704 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -108,7 +108,7 @@ module_sound=y
 # PL: Obs³uga d¼wiêku przez ALSÊ
 # Needs: libasound
 # Depends: sound
-module_alsa_sound=n
+module_alsa_sound=m
 
 # Description: Direct /dev/dsp sound support (Open Sound System)
 # PL: Obs³uga d¼wiêku przez bezpo¶redni dostêp do urz±dzenia /dev/dsp (Open Sound System)
