moduł agent ponownie dodany
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4717 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -269,6 +269,10 @@ module_spellchecker=n
 # Depends: notify
 module_pcspeaker=n
 
+# Description: List of people, that you don't have on list, but they have you   
+# PL: List osób, jakich nie masz na li¶cie, ale które maj± Ciebie   
+module_agent=n
+
 # Description: ao library sound module (ALSA, OSS, ESD, AIX, IRIX, NAS, Sun, NenBSD, OpenBSD)
 # PL: Obs³uga d¼wiêku przy pomocy biblioteki libao (która obs³uguje:
 # PL:                                    ALSA, OSS, ESD, AIX, IRIX, NAS, Sun, NenBSD, OpenBSD)
