dodano moduł mx610_notify do autodownloadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4718 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -296,11 +296,15 @@ module_miastoplusa_sms=n
 # PL: Modu³ okna rozmowy z zak³adkami
 module_tabs=n
 
-# Description: Notification by Scroll Lock LED
-# PL: Powiadamiania diod± Scroll Lock
+# Description: Notifications by Scroll Lock LED
+# PL: Powiadomiania diod± Scroll Lock
 # Needs: libX11
 # Depends: notify
 module_led_notify=n
+
+# Description: Notifications by LED on Logitech mx610 mouse
+# PL: Powiadomienia diodami na myszy mx610
+module_mx610_notify=m
 
 # Description: Profiles support
 # PL: Klikalna obs³uga profili
