--- a/.config
+++ b/.config
@@ -230,6 +230,10 @@ module_amarok_mediaplayer=n
 # PL: Wsparcie dla XMMS w mediaplayer
 module_xmms_mediaplayer=n
 
+# Description: FALF support for mediaplayer
+# PL: Wsparcie dla FALF w mediaplayer
+module_falf_mediaplayer=n
+
 # Description: Description from file module
 # PL: Obs³uga statusów pobieranych z pliku
 module_filedesc=n
