--- a/.config
+++ b/.config
@@ -89,12 +89,6 @@ module_xosd_notify=n
 # Depends: notify
 module_speech=n
 
-# Description: Notification by XOSD
-# PL: Powiadamianie w stylu OSD za pomoc± biblioteki libxosd
-# Needs: libxosd, libgtk
-# Depends: notify
-module_xosd_notify=n
-
 ##################### sound ##########################################
 # PL: ############### d¼wiêk #########################################
 
@@ -308,7 +302,7 @@ module_led_notify=n
 
 # Description: Notifications by LED on Logitech mx610 mouse
 # PL: Powiadomienia diodami na myszy mx610
-module_mx610_notify=m
+module_mx610_notify=n
 
 # Description: Profiles support
 # PL: Klikalna obs³uga profili
