poprawki w zestawie ikon
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4752 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -64,8 +64,8 @@ NotifyAboutUser=kadu/kadu-notifyaboutuser.png
 
 AutoSendMessage=kadu/kadu-enter.png
 AutoSendMessage_dis=kadu/kadu-enter_dis.png
-ClearChat=kadu/kadu-eraser.png
-ClearChat_dis=kadu/kadu-eraser_dis.png
+ClearChat=kadu/edit-clear.png
+ClearChat_dis=kadu/edit-clear_dis.png
 ChooseEmoticon=kadu/face-smile.png
 ChooseEmoticon_dis=kadu/face-smile_dis.png
 ChooseImage=kadu/insert-image.png
@@ -128,6 +128,7 @@ FileTransferSend=kadu/kadu-transfer_send.png
 FileTransferReceive=kadu/kadu-transfer_receive.png
 SendPublicKey=kadu/kadu-encrypted.png
 OpenFile=kadu/document-open.png
+OpenFile_dis=kadu/
 Warning=kadu/dialog-warning.png
 Information=kadu/dialog-information.png
 Critical=kadu/dialog-error_big.png
@@ -191,9 +192,11 @@ NotifyTab=kadu/kadu-notifications.png
 StatusTab=kadu/kadu-status.png
 ContactsTab=kadu/kadu-contacts.png
 
+Agent=external_modules/module_agent.png
 MailTab=external_modules/module_mail.png
 MediaPlayer=external_modules/module_mediaplayer.png
 MediaPlayerButton=external_modules/module_mediaplayer-button.png
+MediaPlayerButton_dis=external_modules/module_mediaplayer-button_dis.png
 Profiles=external_modules/module_profiles.png
 ProfilesConfigure=external_modules/module_profiles-configure.png
 ProfilesUser=external_modules/module_profiles-user.png
