[0000884] glass16 i glass22 dodane
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4756 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/.config
+++ b/.config
@@ -333,6 +333,12 @@ icons_default=y
 # Description: Default theme from kadu 0.5.x
 icons_kadu05=n
 
+# Description: Glass 16x16 icons made Mariusz Waluga
+icons_glass16=y
+
+# Description: Glass 22x22 icons made Mariusz Waluga
+icons_glass22=y
+
 ########################################### EMOTICONS #########################################################################
 # PL: ##################################### EMOTIKONY #########################################################################
 
