[859] - wyszarzanie przycisku SelectFile
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4763 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/themes/icons/default/icons.conf
+++ b/varia/themes/icons/default/icons.conf
@@ -128,7 +128,7 @@ FileTransferSend=kadu/kadu-transfer_send.png
 FileTransferReceive=kadu/kadu-transfer_receive.png
 SendPublicKey=kadu/kadu-encrypted.png
 OpenFile=kadu/document-open.png
-OpenFile_dis=kadu/
+OpenFile_dis=kadu/document-open_dis.png
 Warning=kadu/dialog-warning.png
 Information=kadu/dialog-information.png
 Critical=kadu/dialog-error_big.png
